Use correct taskexecutor and stop mono wrapping everything