@@ -4,7 +4,15 @@ import com.objectcomputing.checkins.services.permissions.Permission;
 import com.objectcomputing.checkins.services.permissions.RequiredPermission;
 import io.micronaut.core.annotation.Nullable;
 import io.micronaut.http.HttpResponse;
-import io.micronaut.http.annotation.*;
+import io.micronaut.http.HttpStatus;
+import io.micronaut.http.annotation.Body;
+import io.micronaut.http.annotation.Controller;
+import io.micronaut.http.annotation.Delete;
+import io.micronaut.http.annotation.Get;
+import io.micronaut.http.annotation.Post;
+import io.micronaut.http.annotation.Put;
+import io.micronaut.http.annotation.QueryValue;
+import io.micronaut.http.annotation.Status;
 import io.micronaut.scheduling.TaskExecutors;
 import io.micronaut.scheduling.annotation.ExecuteOn;
 import io.micronaut.security.annotation.Secured;
@@ -12,22 +20,17 @@ import io.micronaut.security.rules.SecurityRule;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.NotNull;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import reactor.core.publisher.Mono;
 
 import java.net.URI;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Controller("/services/member-profiles")
-@ExecuteOn(TaskExecutors.IO)
+@ExecuteOn(TaskExecutors.BLOCKING)
 @Secured(SecurityRule.IS_AUTHENTICATED)
 @Tag(name = "member profiles")
 public class MemberProfileController {
 
-    private static final Logger LOG = LoggerFactory.getLogger(MemberProfileController.class);
     private final MemberProfileServices memberProfileServices;
 
     public MemberProfileController(MemberProfileServices memberProfileServices) {
@@ -41,10 +44,10 @@ public class MemberProfileController {
      * @return {@link MemberProfileResponseDTO} Returned member profile
      */
     @Get("/{id}")
-    public Mono<HttpResponse<MemberProfileResponseDTO>> getById(UUID id) {
-        return Mono.fromCallable(() -> memberProfileServices.getById(id))
-                .map(memberProfile -> HttpResponse.ok(fromEntity(memberProfile))
-                        .headers(headers -> headers.location(location(memberProfile.getId()))));
+    public HttpResponse<MemberProfileResponseDTO> getById(UUID id) {
+        MemberProfile memberProfile = memberProfileServices.getById(id);
+        return HttpResponse.ok(fromEntity(memberProfile))
+                        .headers(headers -> headers.location(location(memberProfile.getId())));
     }
 
     /**
@@ -54,11 +57,8 @@ public class MemberProfileController {
      * @return {@link List<MemberProfileResponseDTO>} List of the profiles for the supervisors of the requested member
      */
     @Get("/{id}/supervisors")
-    public Mono<HttpResponse<List<MemberProfileResponseDTO>>> getSupervisorsForId(UUID id) {
-        return Mono.fromCallable(() -> memberProfileServices.getSupervisorsForId(id))
-                .map(entities -> entities.stream()
-                        .map(this::fromEntity).collect(Collectors.toList()))
-                .map(HttpResponse::ok);
+    public List<MemberProfileResponseDTO> getSupervisorsForId(UUID id) {
+        return memberProfileServices.getSupervisorsForId(id).stream().map(this::fromEntity).toList();
     }
 
     /**
@@ -73,16 +73,18 @@ public class MemberProfileController {
      * @return {@link List<MemberProfileResponseDTO>} List of members that match the input parameters
      */
     @Get("/{?firstName,lastName,title,pdlId,workEmail,supervisorId,terminated}")
-    public Mono<HttpResponse<List<MemberProfileResponseDTO>>> findByValue(@Nullable String firstName,
+    public List<MemberProfileResponseDTO> findByValue(@Nullable String firstName,
                                                                             @Nullable String lastName,
                                                                             @Nullable String title,
                                                                             @Nullable UUID pdlId,
                                                                             @Nullable String workEmail,
                                                                             @Nullable UUID supervisorId,
                                                                             @QueryValue(value = "terminated" , defaultValue = "false") Boolean terminated) {
-        return Mono.fromCallable(() -> memberProfileServices.findByValues(firstName, lastName, title, pdlId, workEmail, supervisorId, terminated))
-                .map(entities -> entities.stream().map(this::fromEntity).collect(Collectors.toList()))
-                .map(HttpResponse::ok);
+        return memberProfileServices
+                .findByValues(firstName, lastName, title, pdlId, workEmail, supervisorId, terminated)
+                .stream()
+                .map(this::fromEntity)
+                .toList();
     }
 
     /**
@@ -93,11 +95,11 @@ public class MemberProfileController {
      */
     @Post
     @RequiredPermission(Permission.CAN_CREATE_ORGANIZATION_MEMBERS)
-    public Mono<HttpResponse<MemberProfileResponseDTO>> save(@Body @Valid MemberProfileCreateDTO memberProfile) {
+    public HttpResponse<MemberProfileResponseDTO> save(@Body @Valid MemberProfileCreateDTO memberProfile) {
 
-        return Mono.fromCallable(() -> memberProfileServices.saveProfile(fromDTO(memberProfile)))
-                .map(savedProfile -> HttpResponse.created(fromEntity(savedProfile))
-                        .headers(headers -> headers.location(location(savedProfile.getId()))));
+        MemberProfile savedProfile = memberProfileServices.saveProfile(fromDTO(memberProfile));
+        return HttpResponse.created(fromEntity(savedProfile))
+                        .headers(headers -> headers.location(location(savedProfile.getId())));
     }
 
     /**
@@ -107,14 +109,10 @@ public class MemberProfileController {
      * @return {@link MemberProfileResponseDTO} The updated member profile
      */
     @Put
-    public Mono<HttpResponse<MemberProfileResponseDTO>> update(@Body @Valid MemberProfileUpdateDTO memberProfile) {
-
-        return Mono.fromCallable(() -> memberProfileServices.saveProfile(fromDTO(memberProfile)))
-                .map(savedProfile -> {
-                    MemberProfileResponseDTO updatedMemberProfile = fromEntity(savedProfile);
-                    return HttpResponse.ok(updatedMemberProfile)
-                            .headers(headers -> headers.location(location(updatedMemberProfile.getId())));
-                });
+    public HttpResponse<MemberProfileResponseDTO> update(@Body @Valid MemberProfileUpdateDTO memberProfile) {
+        MemberProfile savedProfile = memberProfileServices.saveProfile(fromDTO(memberProfile));
+        return HttpResponse.ok(fromEntity(savedProfile))
+                            .headers(headers -> headers.location(location(savedProfile.getId())));
     }
 
     /**
@@ -124,10 +122,10 @@ public class MemberProfileController {
      * @return
      */
     @Delete("/{id}")
+    @Status(HttpStatus.OK)
     @RequiredPermission(Permission.CAN_DELETE_ORGANIZATION_MEMBERS)
-    public Mono<HttpResponse<?>> delete(@NotNull UUID id) {
-        return Mono.fromCallable(() -> memberProfileServices.deleteProfile(id))
-                .map(successFlag -> HttpResponse.ok());
+    public void delete(@NotNull UUID id) {
+        memberProfileServices.deleteProfile(id);
     }
 
     protected URI location(UUID id) {
